# EncoderSAE

./: .gitignore  README.md  pyproject.toml  run_analysis_eval.sh  run_analysis_eval_sweep.sh  run_analysis_inference.sh  run_main.py  run_sweep.sh  sweep_analysis.md
EncoderSAE/: __init__.py  activation_cache.py  analyze.py  analyze_main.py  data.py  inference.py  inference_main.py  main.py  model.py  train.py  utils.py
data/: download_data.py
evaluation/: base_eval.py  sae_eval.py  sae_runtime.py  utils.py
